# drission-kernel

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
src/drission_kernel/: __init__.py  helpers.py  protocols.py  session.py  tabs.py
src/drission_kernel/anti_bot/: __init__.py  cloudflare.py  safeline.py
tests/: conftest.py
tests/contract/browser/: test_browser_session_contract.py  test_browser_session_extended_contract.py
tests/contract/drission_kernel/: test_drission_kernel_contract.py
tests/unit/: test_import_boundaries.py
tests/unit/browser/: test_chrome_language.py  test_chrome_singleton_cleanup.py  test_headless_browser_smoke.py
tests/unit/drission_kernel/: test_anti_bot.py  test_bootstrap_config.py  test_session.py
tools/lint/: pylint_src.sh
tools/smoke/: headless_browser_smoke.py
