[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drission-kernel"
version = "0.1.0"
description = "Reusable DrissionPage automation kernel."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "drissionpage~=4.0.4.21",
]

[project.optional-dependencies]
test = [
    "pytest~=8.3.5",
]
lint = [
    "pre-commit~=4.3",
    "pylint~=3.3.8",
    "ruff~=0.15.6",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
fixable = ["ALL"]
unfixable = []
extend-select = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
